static/style.css
/* ... */
main > *:nth-child(even)::before {
  background: var(--grey);
  content: "";
  height: 100%;
  left: calc((100% - 100vw) / 2);
  position: absolute;
  top: 0;
  width: 100vw;
  z-index: -1;
}

main article {
  padding: 3rem 2rem;
}

main h2 {
  border-bottom: 2px solid var(--red);
  font-size: 1.8em;
  font-weight: normal;
  margin: 0.25em auto 1.5em;
  display: table;
}

main h3 {
  font-size: 1.8em;
  margin: 2em 0 0.4em;
}

main h4 {
  font-size: 1.3em;
  margin: 2em 0 0.4em;
}

main nav ul {
  justify-content: center;
}

main nav a, main nav a:visited {
  color: var(--red);
}


/* Footer */

footer {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  justify-content: space-evenly;
  margin: 0 auto;
  max-width: 50rem;
  min-height: 7rem;
  padding: 2rem 0 2rem 1rem;
  width: 100%;
}

footer h2 {
  font-size: 1em;
  margin: 0 0 0.5em;
}

footer ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 921px) {
  footer {
    background: url(/static/images/logo-red.svg) 2.5rem center / 8rem no-repeat;
    flex-direction: row;
    padding-left: 12rem;
  }
}


/* Index Page */

#page-index header {
  background: var(--red);
  height: 95vh;
}

#page-index header p {
  color: var(--white);
  display: block;
  font-family: Inconsolata;
  font-size: 3em;
  line-height: 1.1;
  margin: auto 0 auto 45%;
  max-width: 30rem;
  text-transform: lowercase;
  transform: translatey(-2.5rem);
  width: 55%;
}

#page-index::before {
  content: url(/static/images/logo-white.svg);
  display: block;
  max-width: 15rem;
  left: 40%;
  position: absolute;
  top: 50%;
  transform: translate(-100%, -55%);
  width: 80%;
}

#page-index h3 {
  text-align: center;
}

#page-index figcaption:before {
  content: "– ";
}

#page-index figcaption {
  text-align: right;
}

#page-index blockquote {
  margin: 0;
}

@media (max-width: 920px) {
  #page-index header p {
    font-size: 2em;
    margin: 60vh 10% 0 10%;
    max-width: none;
    text-align: center;
    width: 80%;
  }

  #page-index::before {
    height: 30%;
    left: 50%;
    top: 20%;
    transform: translatex(-50%);
  }
}


/* Projects Section */

#projects dl dt {
  font-family: Inconsolata;
  font-size: 2.5em;
  line-height: 1;
  margin-top: 1em;
  text-shadow: 1px 1px 5px var(--white), -1px -1px 5px var(--white);
  text-transform: lowercase;
}

@media (max-width: 920px) {
  dt, dd {
    margin: 0;
    text-align: center;
  }
}

@media (min-width: 921px) {
  #projects h2 {
    display: none;
  }

  #projects dl dd {
    margin-top: -4em;
    margin-bottom: 6em;
  }

  #projects dl dt a {
    display: block;
    height: 3em;
    position: relative;
  }

  #projects dl dt::before {
    background: center 35% / cover;
    box-shadow: 0 0 5px 1px #0003;
    display: block;
    content: "";
    filter: grayscale(1);
    height: 3em;
    opacity: 0.4;
    position: absolute;
    transform: translatey(-0.25em) skew(-5deg);
    transition: 0.5s;
    width: 40%;
  }

  #projects dl dt[data-project="weasyprint"]::before {
    background-image: url(/static/images/weasyprint-thumbnail.jpg);
  }

  #projects dl dt[data-project="cairosvg"]::before {
    background-image: url(/static/images/cairosvg-thumbnail.svg);
  }

  #projects dl dt[data-project="tinycss2"]::before {
    background-image: url(/static/images/tinycss2-thumbnail.jpg);
  }

  #projects dl dt[data-project="pydyf"]::before {
    background-image: url(/static/images/pydyf-thumbnail.jpg);
  }

  #projects dl dt[data-project="pyphen"]::before {
    background-image: url(/static/images/pyphen-thumbnail.png);
    background-position: 32% center;
  }

  #projects dl dt[data-project="others"]::before {
    background-image: url(/static/images/others-thumbnail.jpg);
  }

  #projects dl dt:hover::before {
    filter: none;
    opacity: 0.6;
  }

  #projects dl dt:nth-of-type(even)::before {
    right: 52%;
  }

  #projects dl dt:nth-of-type(odd)::before {
    left: 52%;
  }

  #projects dl dt:nth-of-type(even) a {
    padding-left: 40%;
  }

  #projects dl dd:nth-of-type(even) {
    margin-left: 50%;
  }

  #projects dl dt:nth-of-type(odd) a {
    margin-left: 0;
    padding-right: 40%;
    text-align: right;
  }

  #projects dl dd:nth-of-type(odd) {
    margin-left: 0;
    margin-right: 50%;
    text-align: right;
  }
}


/* Project Pages */

.project section img {
  height: 5em;
  object-fit: cover;
  width: 100%;
}

@media (min-width: 921px) {
  .project section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 18em;
  }

  .project section:nth-of-type(odd) {
    padding-left: 20em;
    padding-right: 5em;
  }

  .project section:nth-of-type(even) {
    padding-left: 5em;
    padding-right: 20em;
  }

  .project section h3 {
    margin: 0;
  }

  .project section img {
    box-shadow: 0 0 5px 1px #0003;
    display: block;
    height: 15em;
    object-fit: cover;
    position: absolute;
    transform: skewx(-5deg);
    width: 15em;
  }

  .project section:nth-of-type(odd) img {
    left: 2em;
  }

  .project section:nth-of-type(even) img {
    right: 2em;
  }
}


/* Presentation Paragraphs */

.presentation {
  font-style: italic;
  margin: 2em;
  text-align: center;
}

@media (min-width: 921px) {
  .presentation {
    margin: 2em 6em 4em;
  }
}


/* Sponsors */

.sponsors {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: center;
  padding: 2em 0 1em;
}

.sponsors li {
  align-items: center;
  display: flex;
  font-size: 0;
}

.sponsors.gold img {
  max-height: 150px;
  max-width: min(450px, 80vw);
}

.sponsors.silver img {
  max-height: 100px;
  max-width: min(300px, 80vw);
}

.sponsors.bronze img {
  max-height: 50px;
  max-width: min(150px, 80vw);
}


/* Testimonials */

#testimonials figure:not(:last-of-type) {
  margin-bottom: 2em;
}


/* Blog */

#page-article article header {
  background: inherit;
}

#page-article article header p {
  display: block;
}
/* ... */

